--- a/hero-carousel/css/styles.css
+++ b/hero-carousel/css/styles.css
@@ -3,13 +3,20 @@
     padding: 0;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
+	  -webkit-box-sizing: border-box;
 }
 
 body {
    /*background-color: red;*/
     min-height: 100vh;
     width: 100%;
+}
+
+/*Navbar Offcanvas*/
+@media (max-width: 575.98px) { 
+  #offcanvasNavbar {
+    width: 75%;
+  }
 }
 
 /*HERO CAROUSEL*/
