--- a/hero-carousel/css/styles.css
+++ b/hero-carousel/css/styles.css
@@ -1,3 +1,5 @@
+/*GENERAL STYLES*/
+
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +14,8 @@ body {
     width: 100%;
 }
 
-/*Navbar Offcanvas*/
+/*NAVBAR OFFCANVAS*/
+
 @media (max-width: 575.98px) { 
   #offcanvasNavbar {
     width: 75%;
